test/sc++/error/builtin-nonmesh.scpp
../../scc/error/builtin-nonmesh.sc